# RayTracerV2

./: .clang-format  .clang-format-template  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  conanfile.txt  main.cpp
Math/include/: Vector.hpp
RayTracer/: CMakeLists.txt  main.cpp
RayTracer/apps/: RayTracer.cpp
RayTracer/include/: App.hpp  Camera.hpp  Image.hpp  Input.hpp  MainWindow.hpp  Matrix.hpp  Point.hpp  Renderer.hpp  Utils.hpp  Vector.hpp  class.hpp
RayTracer/include/RayObjects/: IHitObject.hpp  Material.hpp  Objects.hpp  Ray.hpp  Scene.hpp
RayTracer/src/: App.cpp  Camera.cpp  Image.cpp  MainWindow.cpp  Renderer.cpp  imgui.ini  main.cpp
cmake_helpers/: CMakeLists.txt
test/math/: CMakeLists.txt  Matrix_Test.cpp  Point_Test.cpp  Vector_Test.cpp
